--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css ./-->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- google font -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,22 +36,43 @@
             </ul>
         </nav>
 
-        <!-- banner -->
-        <section class="banner">
+        <!-- banner section-->
+        <section class="banner container">
             <!-- banner left -->
             <div>
-                <h1>Mi LED TV 4A PRO 32
-                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                    do amet</h1>
+                <h1>Mi LED TV 4A PRO 32</h1>
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
                     do amet sint. Velit officia consequat duis enim velit mollit.
                     Exercitation veniam consequat sunt nostrud amet</p>
                 <span class="banner-price">$1299</span>
-                <button class="">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <!-- banner right -->
             <img src="./assets/images/banner-images/tv.png" alt="tv">
         </section>
+
+        <!-- category section -->
+         <section class="categories container">
+            <h2>Categories</h2>
+            <div class="categories-card-container">
+                <div class="category-card">
+                    <h3>Watch</h3>
+                    <img src="./assets/images/categories/watch.png" alt="watch">
+                </div>
+
+                <div class="category-card">
+                    <h3>Bag</h3>
+                    <img src="./assets/images/categories/bag.png" alt="Bag">
+                </div>
+
+                <div class="category-card">
+                    <h3>Shoes</h3>
+                    <img src="./assets/images/categories/shoes.png" alt="Shoes">
+                </div>
+            </div>
+
+            
+         </section>
     </main>
 </body>
 
