fav icon and nav dropdown ok

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -32,7 +33,20 @@
             </div>
             <ul class="nav-items">
                 <li><a href="">Home</a></li>
-                <li><a href="">Product</a></li>
+
+                <li class="product-li">
+                    <a href="">
+                        Products <i class="fa-regular fa-square-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-nav-items">
+                        <li><a href="">Product 1</a></li>
+                        <li><a href="">Product 2</a></li>
+                        <li><a href="">Product 3</a></li>
+                        <li><a href="">Product 4</a></li>
+                        <li><a href="">Product 5</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="">About Us</a></li>
                 <li><a href="#contact_us">Contact Us</a></li>
             </ul>
@@ -77,89 +91,89 @@
         </section>
         <!-- shoes section -->
         <section class="shoes-backpack-parent">
-            <div class="shoes-section container">   
-            <div class="shoes-backpack-section-title-parent">
-                <h2>Shoes</h2>
-                <p>View All</p>
-            </div>
-            <div class="shoe-card-container">
-                <div class="shoe-card">
-                    <img src="./assets/images/shoes/shoe-1.png" alt="shoe-1">
-                    <h2> Reebok Dart Men’s Shoes</h2>
-                    <p> Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint.</p>
-                    <span class="card-price">$1289</span>
-                    <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+            <div class="shoes-section container">
+                <div class="shoes-backpack-section-title-parent">
+                    <h2>Shoes</h2>
+                    <p>View All</p>
                 </div>
+                <div class="shoe-card-container">
+                    <div class="shoe-card">
+                        <img src="./assets/images/shoes/shoe-1.png" alt="shoe-1">
+                        <h2> Reebok Dart Men’s Shoes</h2>
+                        <p> Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <span class="card-price">$1289</span>
+                        <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
 
-                <div class="shoe-card">
-                    <img src="./assets/images/shoes/shoe-2.png" alt="shoe-2">
-                    <h2>  Reebok Pump</h2>
-                    <p> Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint.</p>
-                    <span class="card-price">$1289</span>
-                    <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
-                </div>
+                    <div class="shoe-card">
+                        <img src="./assets/images/shoes/shoe-2.png" alt="shoe-2">
+                        <h2> Reebok Pump</h2>
+                        <p> Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <span class="card-price">$1289</span>
+                        <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
 
-                <div class="shoe-card">
-                    <img src="./assets/images/shoes/shoe-3.png" alt="shoe-3">
-                    <h2> Reebok All Terrain</h2>
-                    <p> Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint.</p>
-                    <span class="card-price">$1289</span>
-                    <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    <div class="shoe-card">
+                        <img src="./assets/images/shoes/shoe-3.png" alt="shoe-3">
+                        <h2> Reebok All Terrain</h2>
+                        <p> Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <span class="card-price">$1289</span>
+                        <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
                 </div>
             </div>
-        </div>
         </section>
 
         <!-- backpack section -->
-           <section class="shoes-backpack-parent">
-            <div class="shoes-section container">   
-            <div class="shoes-backpack-section-title-parent">
-                <h2>Backpack</h2>
-                <p>View All</p>
-            </div>
-            <div class="shoe-card-container">
-                <div class="shoe-card">
-                    <img src="./assets/images/bags/bag-1.png" alt="bag-1">
-                    <h2>Ison Backpack</h2>
-                    <p> Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint.</p>
-                    <span class="card-price">$1289</span>
-                    <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+        <section class="shoes-backpack-parent">
+            <div class="shoes-section container">
+                <div class="shoes-backpack-section-title-parent">
+                    <h2>Backpack</h2>
+                    <p>View All</p>
                 </div>
+                <div class="shoe-card-container">
+                    <div class="shoe-card">
+                        <img src="./assets/images/bags/bag-1.png" alt="bag-1">
+                        <h2>Ison Backpack</h2>
+                        <p> Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <span class="card-price">$1289</span>
+                        <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
 
-                <div class="shoe-card">
-                    <img src="./assets/images/bags/bag-2.png" alt="bag-2">
-                    <h2>Biaowang Backpack</h2>
-                    <p> Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint.</p>
-                    <span class="card-price">$1289</span>
-                    <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
-                </div>
+                    <div class="shoe-card">
+                        <img src="./assets/images/bags/bag-2.png" alt="bag-2">
+                        <h2>Biaowang Backpack</h2>
+                        <p> Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <span class="card-price">$1289</span>
+                        <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
 
-                <div class="shoe-card">
-                    <img src="./assets/images/bags/bag-3.png" alt="bag-3">
-                    <h2> Dxyizu WS54 Smart</h2>
-                    <p> Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint.</p>
-                    <span class="card-price">$1289</span>
-                    <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    <div class="shoe-card">
+                        <img src="./assets/images/bags/bag-3.png" alt="bag-3">
+                        <h2> Dxyizu WS54 Smart</h2>
+                        <p> Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <span class="card-price">$1289</span>
+                        <button class="panda-btn">Buy Now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
                 </div>
             </div>
-        </div>
         </section>
 
         <!-- contact us section -->
-         <section class="contact-us-parent container" id="contact_us">
+        <section class="contact-us-parent container" id="contact_us">
             <h2> LET'S STAY IN TOUCH</h2>
             <p> Get updates on sales specials and more</p>
             <div class="contact-inp-btn-parent">
-                <input type="text" placeholder="Enter Your Email"/>
+                <input type="text" placeholder="Enter Your Email" />
                 <button class="panda-btn">Send </button>
             </div>
-         </section>
+        </section>
 
     </main>
 </body>
